fix a bug:the codes left shines because the typewriter haven't get ready to work,so make it visible before the typewriter begins working !

--- a/css/normal.css
+++ b/css/normal.css
@@ -15,6 +15,7 @@ body
 }
 #main_div
 {
+    visibility: hidden;
     z-index: 2;
     width:100%;
     height:100%;
